--- a/home_work_17/index.html
+++ b/home_work_17/index.html
@@ -11,21 +11,21 @@
 <body>
     <form>
         <div class="checkbox1">
-            <input id="ch_box" type="checkbox">
-            <label for="ch_box"></label>
+            <input id="checkbox1" type="checkbox">
+            <label for="checkbox1"></label>
         </div>
          <div class="checkbox2">
-            <input id="ch_box"  type="checkbox" >
-            <label for="ch_box"></label>
+            <input id="checkbox2"  type="checkbox" >
+            <label for="checkbox2"></label>
         </div>
         <div class="checkbox3">
-            <input id="ch_box"  type="checkbox" >
-            <label for="ch_box">
+            <input id="checkbox3"  type="checkbox" >
+            <label for="checkbox3">
             </label>
         </div>
         <div class="checkbox4">
-            <input id="ch_box"  type="checkbox" >
-            <label for="ch_box">
+            <input id="checkbox4"  type="checkbox" >
+            <label for="checkbox4">
                 
             </label>
         </div>
